# animespeechdataset

./: .gitignore  LICENSE.txt  README.md  README_jp.md  asr_api.py  check_embeds.py  check_knn.py  docker-compose.yml  requirements-train.txt  requirements.txt  setup.cfg  setup.py  spk_inference.py  train_webui.py  webui_dataset.py  webui_finder.py
common/: log.py
configs/: __init__.py  config.py  default_config.toml
docker/: .dockerignore  Dockerfile.espnet  Dockerfile.reazonspeech  requirements_espnet.txt  requirements_reazonspeech.txt
src/characterdataset/api/: __main__.py  asr_api.py  embeddings_api.py
src/characterdataset/common/: log.py  texts.json
src/characterdataset/configs/: config.py  default_config.toml
src/characterdataset/datasetmanager/: audio_dataset.py  dataset_manager.py  text_dataset.py  utils.py
src/characterdataset/oshifinder/: __init__.py  crop.py  finder.py  knn_choose.py  predict.py  utils.py
src/characterdataset/train_llm/: __init__.py  __main__.py  default_config.toml  train_conversational.py
tests/: test_dataset_manager.py  test_finder.py  test_train_conversational.py
tools/: check_knn.py  knn_choose.py
train_llm/: default_config.toml  requirements.txt  train_conversational.py  train_webui.py
