[metadata]
name = characterdataset
version = 0.0.1
author = víctor rodrigo
description = Designed to create files usable for LLM and TTS
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
